# dna-storage-system

./: Dockerfile  README.md  oa-build-docker.sh  oa-run-docker.sh
oa-dsm/: clean.sh  config_template.sh  decode.sh  encode.sh  run_simulator.sh  setTablesPath.sh  setup.sh
oa-dsm/applications/OneConsensus/: CMakeLists.txt
oa-dsm/applications/OneConsensus/src/: CMakeLists.txt  Time.cpp  Time.hpp  constants.cpp  constants.hpp  functions.cpp  functions.h  main.cpp  onecluster.cpp  onecluster.hpp  onejoin.hpp  onejoin_dpcpp.cpp  utils.cpp  utils.hpp
oa-dsm/applications/ReadsProcessingTools/: CMakeLists.txt  Utils.cpp  Utils.h  includes.h  main_consensus.cpp  main_primers_removal.cpp  main_reads_grouping.cpp
oa-dsm/applications/ReadsSimulator/: CMakeLists.txt
oa-dsm/applications/XCoder/: CMakeLists.txt  main_decoder.cpp  main_encoder.cpp
oa-dsm/applications/XCoder/Settings/: CodecConfiguration.cpp  CodecConfiguration.h  Constants.h  FileConfiguration.cpp  FileConfiguration.h  Generic.cpp  Generic.h
oa-dsm/data/: left_primer  right_primer
oa-dsm/scripts/: CustomSimulator.py  addPrimers.py  concat_fastas.sh  print_stats.sh  reverse-complement.py
oa-dsm/src/AlignmentTools/: Aligner.cpp  Aligner.h
oa-dsm/src/AlignmentTools/edlib/src/: edlib.cpp
oa-dsm/src/Codec/: Codec.cpp  Codec.h  CodecExceptions.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h
oa-dsm/src/Common/: Logger.cpp  Logger.h  MD5.cpp  MD5.h  Utils.cpp  Utils.h
oa-dsm/src/DataStructure/: BitVector.cpp  BitVector.h  Cluster.cpp  Cluster.h  DataStructureExceptions.h  Extent.cpp  Extent.h  File.cpp  File.h  Motif.cpp  Motif.h  Serializer.cpp  Serializer.h
oa-dsm/src/LDPC-codes/: LGPL  README.md  alist-to-pchk.c  alloc.c  alloc.h  blockio.c  blockio.h  channel.c  channel.h  channel.html  check.c  check.h  dec.c  dec.h  decode-detail.html  decode.c  decoding.html  dep-H.html  distrib.c  distrib.h  enc.c  enc.h  encode.c  encoding.html  examples.html  extract.c  extract_systematic.c  index.html  install.html  intio.c  intio.h  make-gen.c  make-ldpc.c  make-pchk.c  mod2convert-test.c  mod2convert.c  mod2convert.h  mod2convert.html  mod2dense-test.c  mod2dense.c  (+27 more)
oa-dsm/tests/: CMakeLists.txt
oa-dsm/tests/TestAlignment/: TestAlignment.cpp
oa-dsm/tests/TestCodec/: TestCodec.cpp  TestDecoder.cpp  TestEncoder.cpp
oa-dsm/tests/TestCommon/: TestLogger.cpp
oa-dsm/tests/TestDataStructures/: TestBitVector.cpp  TestCluster.cpp  TestExtent.cpp  TestMotifs.cpp  TestOligo.cpp  TestSerializer.cpp
oa-dsm/tests/TestUseCase/: TestEncodingDecoding.cpp
